force-app/main/default/objects/Xero_Activity__c/Xero_Activity__c.object-meta.xml
<CustomObject>
    <label>Xero Activity</label>
    <nameField>
        <label>Xero Activity Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>