force-app/main/default/objects/Xero_Activity__c/fields/Sent_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Sent_Invoices__c</fullName>
    <label>Sent Invoices</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>