force-app/main/default/objects/Xero_Activity__c/fields/Week_Ending__c.field-meta.xml
<CustomField>
    <fullName>Week_Ending__c</fullName>
    <label>Week Ending</label>
    <required>true</required>
    <type>Date</type>
</CustomField>