force-app/main/default/objects/Xero_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Week_Ending__c</columns>
    <columns>User__c</columns>
    <columns>Sent_Invoices__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>